# dojo

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  ERRORS.md  HACKING.md  LICENSE  NOTES.md  README.md  SECURITY.md  SPEC.md  Vagrantfile  auth.py  default_location  deploy-local  deploy.sh  docker-compose.yml  docker-entrypoint.sh  dojo.sh  dojoadm.sh  enter.py  highlight.py  index.html  main.py  migrate_emojis.py  package.json  run.sh  setup.sh  user_firewall.allowed  windows.md
.devcontainer/: devcontainer.json  setup.sh
CTFd_plugin/: __init__.py  belts.py  binary_ninja.py  bootstrap.py  challenge.py  challenges.py  config.py  discord.py  docker_challenge.py  download.py  grades.py  private_dojo.py  requirements.txt  scoreboard.py  settings.py  setup.py  ssh_key.py  terminal.py  user_flag.py  utils.py  workspace.py  writeups.py
challenge/: .gdbinit  .radare2rc  Dockerfile  bash.bashrc  docker-entrypoint.sh  docker-initialize.sh  entrypoint.sh  launch.c  launch.sh  setuid_interpreter.c  setuid_python.c  start-vscode.sh
ctfd/: .coveragerc  Dockerfile  dojo-requirements.txt  requirements.txt
db/: Dockerfile  start.sh
dev/: setup.sh
discord_bot/: Dockerfile  bot.py  discord_bot.py
docs/: CONTRIBUTING.md  agents.md  api.md  architecture.md  challenge.md  deployment.md  development.md  history.md  registry.md
dojo/: automount-home  automount-overlay  dojo  dojo-init  dojo-node  (+3 more)
dojo-socket/: Dockerfile  dojo-socket-service.py
windows/challenge-proxy/: Cargo.toml
windows/challenge-proxy/src/: main.rs
(+750 files in other folders)
