[package]
name = "challenge-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.20"
once_cell = "1.18.0"
tokio = { version = "1.32.0", features = ["full"] }
windows-service = "0.6.0"

[target.'cfg(windows)'.dependencies]
winlog = "0.2.6"
